--- a/index.html
+++ b/index.html
@@ -62,10 +62,22 @@
             <button id="show-all-db">データベースをみる</button>
         </div>
         <div id="displayPage">
-            <h1>予定表</h1>
-            <div id="day-of-week">
-                  
-            <div id="schedule-list"></div>
+            <h2>予定表</h2>
+            <div id="schedule-container">
+                <div id="time-axis">
+                </div>
+                    <div id="day-of-week">
+                        <div class="column">日</div>
+                        <div class="column">月</div>
+                        <div class="column">火</div>
+                        <div class="column">水</div>
+                        <div class="column">木</div>
+                        <div class="column">金</div>
+                        <div class="column">土</div>
+                    </div>
+                    <div id="schedule-list">
+                </div>
+            </div>
         </div>
     </main>
 
