create nice visual

--- a/index.html
+++ b/index.html
@@ -62,20 +62,29 @@
             <button id="show-all-db">データベースをみる</button>
         </div>
         <div id="displayPage">
-            <h2>予定表</h2>
             <div id="schedule-container">
-                <div id="time-axis">
+                <div id="day-of-week">
+                    <div class="column">時間\曜日</div>
+                    <div class="column">日</div>
+                    <div class="column">月</div>
+                    <div class="column">火</div>
+                    <div class="column">水</div>
+                    <div class="column">木</div>
+                    <div class="column">金</div>
+                    <div class="column">土</div>
                 </div>
-                    <div id="day-of-week">
-                        <div class="column">日</div>
-                        <div class="column">月</div>
-                        <div class="column">火</div>
-                        <div class="column">水</div>
-                        <div class="column">木</div>
-                        <div class="column">金</div>
-                        <div class="column">土</div>
+                <div id="row">
+                    <div id="time-axis">
                     </div>
                     <div id="schedule-list">
+                        <div class="schedule-column"></div>
+                        <div class="schedule-column"></div>
+                        <div class="schedule-column"></div>
+                        <div class="schedule-column"></div>
+                        <div class="schedule-column"></div>
+                        <div class="schedule-column"></div>
+                        <div class="schedule-column"></div>
+                    </div>
                 </div>
             </div>
         </div>
